fix a few bugs and alignment issues

--- a/app/assets/stylesheets/_mens_womens_item_cards.scss
+++ b/app/assets/stylesheets/_mens_womens_item_cards.scss
@@ -1,3 +1,9 @@
+.box_brands{
+  width: 300px !important;
+  position: relative;
+  left: 125px;
+}
+
 .box{
   width: 300px !important;
   position: relative;
@@ -54,7 +60,7 @@
   p{
     font-size: 15px;
     position: relative;
-    top: 190px;
+    top: 180px;
   }
 }
 
