--- a/app/assets/stylesheets/root_page/index.scss
+++ b/app/assets/stylesheets/root_page/index.scss
@@ -101,6 +101,9 @@ $calisto: "Calisto MT Regular";
     &:hover{
       cursor: pointer;
     }
+    a{
+      text-decoration: none;
+    }
   }
 }
 .womens-root{
